--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
         }
     ],
     "require": {
-        "mandarinmedien/mmcmfnodebundle": "0.*",
-        "mandarinmedien/mmcmfroutingbundle": "0.*",
+        "mandarinmedien/mmcmfnodebundle": "dev-master",
+        "mandarinmedien/mmcmfroutingbundle": "dev-master",
     },
     "repositories": [
         {
