fixed composer json

--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     ],
     "require": {
         "mandarinmedien/mmcmfnodebundle": "dev-master",
-        "mandarinmedien/mmcmfroutingbundle": "dev-master",
+        "mandarinmedien/mmcmfroutingbundle": "dev-master"
     },
     "repositories": [
         {
