--- a/Resources/config/doctrine/MenuItem.orm.yml
+++ b/Resources/config/doctrine/MenuItem.orm.yml
@@ -9,5 +9,7 @@ MandarinMedien\MMCmfMenuBundle\Entity\MenuItem:
     manyToOne:
         nodeRoute:
             targetEntity: MandarinMedien\MMCmfRoutingBundle\Entity\NodeRoute
+            joinColumn:
+                onDelete: "SET NULL"
 
     lifecycleCallbacks: {  }
