--- a/Resources/config/doctrine/Menu.orm.yml
+++ b/Resources/config/doctrine/Menu.orm.yml
@@ -14,6 +14,9 @@ MandarinMedien\MMCmfMenuBundle\Entity\Menu:
             length: 255
         position:
             type: integer
+            options:
+                default: 0
+            nullable: true
 
     oneToMany:
         items:
