Namespace fixes / added doctrine/data-fixtures to suggestions

--- a/composer.json
+++ b/composer.json
@@ -18,5 +18,8 @@
   },
   "require": {
     "mandarinmedien/mmcmfnodebundle": "^0.4"
+  },
+  "suggest": {
+    "doctrine/data-fixtures": "For loading ORM fixtures"
   }
 }
